# src/main/java/ru/mentee/power/crm/contact/adapter/in/rest/GlobalExceptionHandler.java
@@ -4,6 +4,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ProblemDetail;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import ru.mentee.power.crm.contact.usecase.service.LinkedPersonNotFoundException;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
@@ -24,6 +25,20 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(PersonNotFoundException.class)
     public ProblemDetail handlePersonNotFound(PersonNotFoundException ex) {
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.NOT_FOUND, ex.getMessage());
+        problem.setProperty("errorCode", "PERSON_NOT_FOUND");
+        return problem;
+    }
+
+    @ExceptionHandler(CompanyNotFoundException.class)
+    public ProblemDetail handleCompanyNotFound(CompanyNotFoundException ex) {
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.NOT_FOUND, ex.getMessage());
+        problem.setProperty("errorCode", "COMPANY_NOT_FOUND");
+        return problem;
+    }
+
+    @ExceptionHandler(LinkedPersonNotFoundException.class)
+    public ProblemDetail handleLinkedPersonNotFound(LinkedPersonNotFoundException ex) {
         ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.NOT_FOUND, ex.getMessage());
         problem.setProperty("errorCode", "PERSON_NOT_FOUND");
         return problem;
