# src/main/java/ru/mentee/power/crm/contact/domain/model/Person.java
@@ -1,42 +1,45 @@
 package ru.mentee.power.crm.contact.domain.model;
 
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
 import java.time.Instant;
 import java.util.UUID;
 
+@Data
+@Builder
+@NoArgsConstructor(access = AccessLevel.PROTECTED)
+@AllArgsConstructor
+@EqualsAndHashCode(of = "id")
 public class Person {
-    private final UUID id;
-    private final String fullName;
-    private final String email;
-    private final Instant createdAt;
+    private UUID id;
+    private String fullName;
+    private String email;
+    private Instant createdAt;
     private Instant updatedAt;
 
-    public Person(UUID id, String fullName, String email, Instant createdAt, Instant updatedAt) {
-        this.id = id;
-        this.fullName = fullName;
-        this.email = email;
-        this.createdAt = createdAt;
-        this.updatedAt = updatedAt;
-    }
-
     public static Person create(String fullName, String email) {
-        UUID nowId = UUID.randomUUID();
         Instant now = Instant.now();
-        return new Person(nowId, fullName, email, now, now);
+        return Person.builder()
+                .id(UUID.randomUUID())
+                .fullName(fullName)
+                .email(email)
+                .createdAt(now)
+                .updatedAt(now)
+                .build();
     }
-
-    public UUID getId() { return id; }
-    public String getFullName() { return fullName; }
-    public String getEmail() { return email; }
-    public Instant getCreatedAt() { return createdAt; }
-    public Instant getUpdatedAt() { return updatedAt; }
 
     public Person update(String newFullName, String newEmail) {
-        return new Person(
-                this.id,
-                newFullName,
-                newEmail,
-                this.createdAt,
-                Instant.now()
-        );
+        return Person.builder()
+                .id(this.id)
+                .fullName(newFullName)
+                .email(newEmail)
+                .createdAt(this.createdAt)
+                .updatedAt(Instant.now())
+                .build();
     }
 }
